# RSC-Task-Manager

./: README.md  pyproject.toml
src/task_manager/: gui_ui.py  main.py
