[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager"
version = "0.1.0"
description = "Simple Task Manager with CLI and Tkinter GUI"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Your Name"}]
dependencies = []

[project.scripts]
task-manager = "task_manager.main:main"

[tool.setuptools.packages.find]
where = ["src"]
